force-app/main/default/objects/Case/fields/Actual_Hours_Invested__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_Invested__c</fullName>
    <label>Actual Hours Invested</label>
    <length>100</length>
    <type>Text</type>
</CustomField>