force-app/main/default/objects/Case/fields/Architecture_Comments__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Comments__c</fullName>
    <description>Comments from internal architect pertaining to this case.</description>
    <inlineHelpText>Comments from internal architect pertaining to this case.</inlineHelpText>
    <label>Architecture Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>