force-app/main/default/objects/Case/fields/ATG_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ATG_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ATG opportunity this requirement has been driven from as the result of moving through the sales pipeline process</description>
    <label>ATG Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Case</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>