force-app/main/default/objects/Case/fields/Customer_Priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_Priority__c</fullName>
    <description>Created to supplement the out of the box Priority field so that application support resources can give a priority score to a customer based off the terminology the customer prefers.</description>
    <inlineHelpText>Please input the Priority of this case utilizing the terminology that is preferred by the client. (ex. Low, Medium, High; 1, 2, 3, etc.)</inlineHelpText>
    <label>Customer Priority</label>
    <type>TextArea</type>
</CustomField>