force-app/main/default/objects/Case/fields/Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Steps__c</fullName>
    <description>Indicate any information that is needed to deploy this case to another environment. This should encompass all manual changes that are necessary.</description>
    <inlineHelpText>Indicate any information that is needed to deploy this case to another environment. This should encompass all manual changes that are necessary.</inlineHelpText>
    <label>Deployment Steps:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>