force-app/main/default/objects/Case/fields/Escalated_to__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field that determines who an escalation was assigned to. This can be a specific user or queue.</description>
    <label>Escalated to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>