force-app/main/default/objects/Case/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATG Billing/CPQ Community</fullName>
            </value>
            <value>
                <fullName>ATG Implementation Team</fullName>
            </value>
            <value>
                <fullName>Expert Services Team</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Salesforce Practice Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>