force-app/main/default/objects/Case/fields/External_Comments__c.field-meta.xml
<CustomField>
    <fullName>External_Comments__c</fullName>
    <description>Comments that are externally visible when closing a case. The closed case email is only sent to the user listed as the Contact on the case.</description>
    <inlineHelpText>Comments that are externally visible when closing a case. The closed case email is only sent to the user listed as the Contact on the case.</inlineHelpText>
    <label>External Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>