force-app/main/default/objects/Case/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>Field used for storing internal comments on a Case.</description>
    <inlineHelpText>Field used for storing internal comments on a Case.</inlineHelpText>
    <label>Internal Comments</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>