force-app/main/default/objects/Case/fields/KimbleOne__ActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Obsolete - Activity Assignment</label>
    <referenceTo>KimbleOne__ActivityAssignment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>