force-app/main/default/objects/Case/fields/KimbleOne__Proposal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>KimbleOne__Proposal__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>