force-app/main/default/objects/Case/fields/Latest_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Latest_Email_Message__c</fullName>
    <description>Latest Email used for stamping value with WFR that is then used in automatically closing a case</description>
    <label>Latest Email Message</label>
    <type>DateTime</type>
</CustomField>