force-app/main/default/objects/Case/fields/New_Updated_Configuration__c.field-meta.xml
<CustomField>
    <fullName>New_Updated_Configuration__c</fullName>
    <description>Indicate any changes to configuration, metadata, record data that was done for this case in the environment</description>
    <inlineHelpText>Indicate any changes to configuration, metadata, record data that was done for this case in the environment</inlineHelpText>
    <label>New/Updated Configuration:</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>