force-app/main/default/objects/Case/fields/Number_of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Open__c</fullName>
    <formula>If(TEXT(Status) &lt;&gt; &apos;Closed - Issue Resolved&apos;, 
      Round(Today() - DATEVALUE(CreatedDate), 0), ClosedDate - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>