force-app/main/default/objects/Case/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>