force-app/main/default/objects/Case/fields/Send_Case_Closed_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Case_Closed_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this customer will receive a case closed email notification</description>
    <inlineHelpText>If checked this customer will receive a case closed email notification</inlineHelpText>
    <label>Send Case Closed Email</label>
    <type>Checkbox</type>
</CustomField>