force-app/main/default/objects/Case/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <description>The support type of the request. Drives case closed emails to either PST or Expert Services. Selecting &quot;Other&quot; will prevent a Case Closed email from being sent out when a case is automatically closed by the system.</description>
    <inlineHelpText>The support type of the request. Drives case closed emails to either PST or Expert Services. Selecting &quot;Other&quot; will prevent a Case Closed email from being sent out when a case is automatically closed by the system.</inlineHelpText>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Post-Implementation Support</fullName>
            </value>
            <value>
                <fullName>Expert Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Expert Services - Ad hoc</fullName>
                <isActive>false</isActive>
                <label>Expert Services - Ad hoc</label>
            </value>
            <value>
                <fullName>Expert Services - Continuous</fullName>
                <isActive>false</isActive>
                <label>Expert Services - Continuous</label>
            </value>
            <value>
                <fullName>PST - Ad hoc</fullName>
                <isActive>false</isActive>
                <label>PST - Ad hoc</label>
            </value>
            <value>
                <fullName>PST - Continuous</fullName>
                <isActive>false</isActive>
                <label>PST - Continuous</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>