force-app/main/default/objects/Case/fields/System_Version__c.field-meta.xml
<CustomField>
    <fullName>System_Version__c</fullName>
    <label>System Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>