force-app/main/default/objects/Case/fields/Total_Case_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Days__c</fullName>
    <description>Date/Time Closed - Date/Time Created</description>
    <label>Total Case Days</label>
    <type>DateTime</type>
</CustomField>