force-app/main/default/objects/Case/fields/Total_Hours_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Estimated__c</fullName>
    <label>Total Hours Estimated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>