force-app/main/default/objects/Case/recordTypes/ATG_IT_Support.recordType-meta.xml
<RecordType>
    <fullName>ATG_IT_Support</fullName>
    <active>true</active>
    <businessProcess>IT Support Process</businessProcess>
    <description>record type for cases recieved via email-to-case for the ATG IT Team</description>
    <label>ATG IT Support</label>
</RecordType>