force-app/main/default/objects/Case/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <description>Standard Case Record Type</description>
    <label>General</label>
</RecordType>