force-app/main/default/objects/Case/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <description>Internal ATG Support Record Type</description>
    <label>Internal</label>
</RecordType>