force-app/main/default/objects/Case/validationRules/Case_Status_Reserved_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Status_Reserved_Values</fullName>
    <active>false</active>
    <description>Validation rule to prevent users from selecting system stamped values</description>
    <errorConditionFormula>If(ISPICKVAL(Status, &apos;Case Closed - System&apos;), True, False || 
If(ISPICKVAL(Status, &apos;Escalated&apos;), True, False || 
If(ISPICKVAL(Status, &apos;Awaiting Agent&apos;), True, False ||  
If(ISPICKVAL(Status, &apos;Awaiting Customer&apos;), True, False ||  
If(ISPICKVAL(Status, &apos;Reopened&apos;), True, False ||
If(ISPICKVAL(Status, &apos;New&apos;), True, False))))))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>This is a system reserved Case Status, please select a different status for this Case.</errorMessage>
</ValidationRule>