force-app/main/default/objects/Case/listViews/Admin_Cases.listView-meta.xml
<ListView>
    <fullName>Admin_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Resolution_Time__c</columns>
    <columns>CASES.EMAIL</columns>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internal</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Case Closed</value>
    </filters>
    <label>Admin Cases</label>
    <queue>Internal_Salesforce_Optimization</queue>
</ListView>