force-app/main/default/objects/Case/listViews/All_Cases_1.listView-meta.xml
<ListView>
    <fullName>All_Cases_1</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.NAME</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <columns>Resolution_Time__c</columns>
    <columns>External_Comments__c</columns>
    <columns>Internal_Comments__c</columns>
    <columns>CASES.CLOSED</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>contains</operation>
        <value>In-Progress,Solution Suggested,Awaiting Agent,Awaiting Customer,Awaiting Cognizant IT</value>
    </filters>
    <label>All Cases</label>
</ListView>