force-app/main/default/objects/Case/listViews/ATG_IT_Tickets.listView-meta.xml
<ListView>
    <fullName>ATG_IT_Tickets</fullName>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.EMAIL</columns>
    <columns>NAME</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.ATG_IT_Support</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>notEqual</operation>
        <value>success@atginfo.com</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In-Progress,Solution Suggested,On Hold,Awaiting Agent,Awaiting Customer,Idle,Reopened,Awaiting Cognizant IT</value>
    </filters>
    <label>ATG IT- NEW &amp; AWAITING IT</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>